@@ -41,6 +41,21 @@ SleepyPostList::~SleepyPostList() {
     free(data);
 }
 
+
+om_doccount
+SleepyPostList::get_termfreq() const
+{
+    return termfreq;
+}
+
+om_docid
+SleepyPostList::get_docid() const
+{
+    Assert(!at_end());
+    Assert(pos != 0);
+    return data[pos - 1];
+}
+
 om_weight SleepyPostList::get_weight() const {
     Assert(!at_end());
     Assert(ir_wt != NULL);
@@ -48,4 +63,37 @@ om_weight SleepyPostList::get_weight() const {
     om_doccount wdf = 1;
 
     return ir_wt->get_sumpart(wdf, 1.0);
+}
+
+PostList *
+SleepyPostList::next(om_weight w_min)
+{
+    Assert(!at_end());
+    pos ++;
+    return NULL;
+}
+
+PostList *
+SleepyPostList::skip_to(om_docid did, om_weight w_min)
+{
+    Assert(!at_end());
+    if(pos == 0) pos++;
+    while (!at_end() && data[pos - 1] < did) {
+	PostList *ret = next(w_min);
+	if (ret) return ret;
+    }
+    return NULL;
+}
+
+bool
+SleepyPostList::at_end() const
+{
+    if(pos > termfreq) return true;
+    return false;
+}
+
+string
+SleepyPostList::intro_term_description() const
+{   
+    return tname + ":" + inttostring(termfreq);
 }
