@@ -55,58 +55,4 @@ class SleepyPostList : public LeafPostList {
 	string intro_term_description() const;
 };
 
-
-
-///////////////////////////////////////////
-// Inline definitions for SleepyPostList //
-///////////////////////////////////////////
-
-inline om_doccount
-SleepyPostList::get_termfreq() const
-{
-    return termfreq;
-}
-
-inline om_docid
-SleepyPostList::get_docid() const
-{
-    Assert(!at_end());
-    Assert(pos != 0);
-    return data[pos - 1];
-}
-
-inline PostList *
-SleepyPostList::next(om_weight w_min)
-{
-    Assert(!at_end());
-    pos ++;
-    return NULL;
-}
-
-inline PostList *
-SleepyPostList::skip_to(om_docid did, om_weight w_min)
-{
-    Assert(!at_end());
-    if(pos == 0) pos++;
-    while (!at_end() && data[pos - 1] < did) {
-	PostList *ret = next(w_min);
-	if (ret) return ret;
-    }
-    return NULL;
-}
-
-inline bool
-SleepyPostList::at_end() const
-{
-    if(pos > termfreq) return true;
-    return false;
-}
-
-inline string
-SleepyPostList::intro_term_description() const
-{   
-    return tname + ":" + inttostring(termfreq);
-}
-
-
 #endif /* OM_HGUARD_SLEEPY_POSTLIST_H */
