@@ -60,68 +60,4 @@ class SleepyTermList : public LeafTermList {
 	bool   at_end() const;
 };
 
-
-
-///////////////////////////////////////////
-// Inline definitions for SleepyTermList //
-///////////////////////////////////////////
-
-inline om_termcount
-SleepyTermList::get_approx_size() const
-{
-    return terms;
-}
-
-inline OmExpandBits
-SleepyTermList::get_weighting() const
-{
-    Assert(!at_end());
-    Assert(pos != 0);
-    Assert(wt != NULL);
-
-    om_termcount wdf = 1; // FIXME - not yet stored in data structure
-    om_doclength norm_len = 1.0; // FIXME - not yet stored in data structure
-
-    return wt->get_bits(wdf, norm_len, SleepyTermList::get_termfreq(), dbsize);
-}
-
-inline const om_termname
-SleepyTermList::get_termname() const
-{
-    Assert(!at_end());
-    Assert(pos != 0);
-    return termcache->term_id_to_name(data[pos]);
-}
-
-inline om_termcount
-SleepyTermList::get_wdf() const
-{
-    Assert(!at_end());
-    Assert(pos != 0);
-    return 1;
-}
-
-inline om_doccount
-SleepyTermList::get_termfreq() const
-{
-    Assert(!at_end());
-    Assert(pos != 0);
-    return 1;
-}   
-
-inline TermList *
-SleepyTermList::next()
-{
-    Assert(!at_end());
-    pos ++;
-    return NULL;
-}
-
-inline bool
-SleepyTermList::at_end() const
-{
-    if(pos > terms) return true;
-    return false;
-}
-
 #endif /* OM_HGUARD_SLEEPY_TERMLIST_H */
